--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint-config-prettier": "^8.6.0",
